data/policies/v1.0/03_auto_loan_eligibility.md
---
document_id: DB-AL
document_title: DemoBank Auto Loan Eligibility Policy
policy_version: "1.0"
status: superseded
effective_from: 2023-01-01
effective_to: 2025-06-30
owner: DemoBank Secured Lending Policy (fictional)
---

# DEMO BANK - SYNTHETIC DOCUMENT - FOR EDUCATIONAL USE ONLY

**Synthetic content created for an educational capstone project.**

## AL-1.1 Purpose and scope

This policy covers pre-qualification for the DemoBank Auto Loan, secured
against the financed vehicle.

## AL-2.1 Applicant age

The applicant must be at least **21** and no more than **70** years of age at
the date of application, and must hold a valid driving entitlement.

## AL-3.1 Minimum income

Gross verifiable annual income must be at least **20,000 currency units**.

## AL-3.2 Employment stability

At least **6 consecutive months** in the current employment or trading
arrangement is required, in full time, part time, self employed or contract
work.

## AL-4.1 Loan amount limits

The Auto Loan is offered between **5,000 and 75,000 currency units**.

## AL-4.2 Maximum loan to value

The loan amount must not exceed **90% of the dealer invoice price or
independent vehicle valuation**, whichever is lower.

## AL-4.3 Maximum term

The maximum scheduled term is **84 months**.

## AL-4.4 Payment assumptions used in assessment

Indicative monthly repayments are calculated on a standard amortising basis
using a representative annual interest rate of **8.90%** and a default
assessment term of **60 months**.

## AL-5.1 Outcome categories

The four outcome categories in section PL-5.1 apply equally to auto loan
pre-qualification.
