data/policies/v2.0/03_auto_loan_eligibility.md
---
document_id: DB-AL
document_title: DemoBank Auto Loan Eligibility Policy
policy_version: "2.0"
status: active
effective_from: 2025-07-01
effective_to: null
owner: DemoBank Secured Lending Policy (fictional)
supersedes: "1.0"
---

# DEMO BANK - SYNTHETIC DOCUMENT - FOR EDUCATIONAL USE ONLY

**Synthetic content created for an educational capstone project.**

## AL-1.1 Purpose and scope

This policy covers pre-qualification for the DemoBank Auto Loan, secured
against the financed vehicle.

## AL-1.3 Summary of changes from version 1.0

- Maximum loan to value reduced from 90% to **85%** (AL-4.2).
- Maximum term reduced from 84 to **72 months** (AL-4.3).
- Minimum credit score raised from 620 to 640 and maximum debt-to-income
  reduced from 45% to 42% by the Credit and Affordability Standards v2.0.

## AL-2.1 Applicant age

The applicant must be at least **21** and no more than **70** years of age at
the date of application, and must hold a valid driving entitlement.

## AL-3.1 Minimum income

Gross verifiable annual income must be at least **20,000 currency units**.

## AL-3.2 Employment stability

At least **6 consecutive months** in the current employment or trading
arrangement is required.

## AL-4.1 Loan amount limits

The Auto Loan is offered between **5,000 and 75,000 currency units**.

## AL-4.2 Maximum loan to value

The loan amount must not exceed **85% of the dealer invoice price or
independent vehicle valuation**, whichever is lower.

## AL-4.3 Maximum term

The maximum scheduled term is **72 months**.

## AL-4.4 Payment assumptions used in assessment

Indicative monthly repayments are calculated on a standard amortising basis
using a representative annual interest rate of **8.90%** and a default
assessment term of **60 months**.

## AL-5.1 Outcome categories

The four outcome categories in section PL-5.1 apply equally to auto loan
pre-qualification.
